[package]
name = "atc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-iterator = "1.4.1"
clap = { version = "4.4.2", features = ["derive"] }
lazy_static = "1.4.0"
rand = "0.8.5"
tts = "0.25.6"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
cocoa-foundation = "0.1"
core-foundation = "0.9"
libc = "0.2"
objc = { version = "0.2", features = ["exception"] }
